# atelier-domingue

./: .gitignore  .replit  README.md  architecture.md  ideas.md  pyproject.toml  replit.md  requirements.txt  rev001.md  run.py  todo.md  verify_bbox.py
garment_programs/: geometry.py  lay_plan.py  measurements.py  nesting.py  plot_utils.py  print_layout.py  seam_types.py
garment_programs/BasicShirtBlock/: __init__.py  shirt_back.py  shirt_draft.py  shirt_front.py
garment_programs/BreadBag/: SEWING.md  __init__.py  bag_body.py  bag_lining.py  bag_strap.py  config.py
garment_programs/MMSTrouserBlock/: __init__.py  ease_config.py  seam_allowances.py  trouser_back.py  trouser_front.py
garment_programs/OnePleatTrouser/: __init__.py  (+3 more)
measurements/: _mms_trouser_template.yaml  andrew.yaml  andrew_1873_jeans.yaml  andrew_denim.yaml  andrew_mms_trousers.yaml  justin.yaml  justin_1873_jeans.yaml  kinto_large.yaml  kinto_small.yaml  shirt.yaml  size_50.yaml
pocket_editor/: app.py  generate.py
pygarment_port/: jeans_back_pyg.py  jeans_front_pyg.py  pygarment_port_notes.md
seamly2d_port/: feasibility_notes.md  format_notes.md  generate_jeans_front.py  jeans_front.sm2d  justin_measurements.smis  measurements.py  pattern_generator.py  run_seamly.py  test_measurements.smis  test_measurements.vit  test_pattern.sm2d  test_pattern.val
tests/: test_core_runtime.py  test_geometry.py  test_lay_plan.py  test_measurements.py  test_offset_polyline.py  test_packing.py  test_plot_utils.py  test_regression_snapshots.py  test_verify_selvedge_jeans.py
tui/: app.py  common.py
(+49 files in other folders)
